--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 /src/**/* linguist-generated=true -diff
 # Exclude test files from language stats
-/test/**/*.ex linguist-documentation=true
+/test/**/*.erl linguist-documentation=true
